# sonifycpp

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md  application.qrc  compile_commands.json  pixel_mapping_doc.md  qrc_resources.cpp  resources.qrc  script.lua  sonifycpp.pro
images/: sonifycpp.xcf
include/sonifycpp/: MapTemplate.hpp  pixel.hpp  utils.hpp
include/sonifycpp/DefaultPixelMappings/: HSVMap.hpp  IntensityMap.hpp
src/: FlowLayout.cpp  FlowLayout.hpp  ImageEditorDialog.cpp  ImageEditorDialog.hpp  PixelMappingManager.cpp  PixelMappingManager.hpp  ReverbDialog.cpp  ReverbDialog.hpp  SpectrumAnalyzer.cpp  SpectrumAnalyzer.hpp  \  aboutdialog.cpp  aboutdialog.hpp  canvas.cpp  canvas.hpp  circle.hpp  config.hpp  drawer.cpp  drawer.hpp  format.hpp  freqmap.hpp  gv.cpp  gv.hpp  line.hpp  lua_bindings.cpp  lua_bindings.hpp  main.cpp  map.hpp  mapping.cpp  mapping.hpp  my_pch.hpp  notes.cpp  notes.hpp  path.hpp  pixelColumn.hpp  pixelbypixel.cpp  playaudio.cpp  playaudio.hpp  preferences.cpp  preferences.hpp  (+22 more)
src/sol/: config.hpp  forward.hpp  sol.hpp
